--- a/assets/homecss/main.css
+++ b/assets/homecss/main.css
@@ -449,3 +449,9 @@ px
     width: 380px !important;
 }
 }
+
+.res-mobile-menu .slicknav_nav {
+    background-color: #0E0067;
+    display: block!important;
+    padding: 20px 30px;
+}
