--- a/igniteap/templates/uifiles/base.html
+++ b/igniteap/templates/uifiles/base.html
@@ -315,7 +315,63 @@ info@igniteap.com <br>
 
 <!--=== REVOLUTION JS ===-->
 <script src="{% static 'assets/js/revslider/rev-active.js' %}"></script>
-
+<script>
+        function updateCountdown() {
+          var countdownDate = new Date("November 19, 2023 00:00:00").getTime();
+          var now = new Date().getTime();
+          var timeRemaining = countdownDate - now;
+        
+          if (timeRemaining <= 0) {
+            document.querySelector(".clock").innerHTML = "Countdown expired!";
+            return;
+          }
+        
+          var days = Math.floor(timeRemaining / (1000 * 60 * 60 * 24));
+          var hours = Math.floor((timeRemaining % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
+          var minutes = Math.floor((timeRemaining % (1000 * 60 * 60)) / (1000 * 60));
+          var seconds = Math.floor((timeRemaining % (1000 * 60)) / 1000);
+        
+          updateContainer(document.querySelector(".days"), days.toString());
+          updateContainer(document.querySelector(".hours"), hours.toString());
+          updateContainer(document.querySelector(".minutes"), minutes.toString());
+          updateContainer(document.querySelector(".seconds"), seconds.toString());
+        }
+        
+        function updateContainer(container, newTime) {
+          var time = newTime.split("");
+        
+          if (time.length === 1) {
+            time.unshift("0");
+          }
+        
+          var first = container.firstElementChild;
+          if (first.lastElementChild.textContent !== time[0]) {
+            updateNumber(first, time[0]);
+          }
+        
+          var last = container.lastElementChild;
+          if (last.lastElementChild.textContent !== time[1]) {
+            updateNumber(last, time[1]);
+          }
+        }
+        
+        function updateNumber(element, number) {
+          var second = element.lastElementChild.cloneNode(true);
+          second.textContent = number;
+        
+          element.appendChild(second);
+          element.classList.add("move");
+        
+          setTimeout(function () {
+            element.classList.remove("move");
+          }, 990);
+          setTimeout(function () {
+            element.removeChild(element.firstElementChild);
+          }, 990);
+        }
+        
+        setInterval(updateCountdown, 1000);
+        </script>
 </body>
 
 </html>
