--- a/igniteap/templates/uifiles/index.html
+++ b/igniteap/templates/uifiles/index.html
@@ -29,6 +29,70 @@
                          data-frames='[{"delay":10,"split":"lines","splitdelay":0.1,"speed":600,"split_direction":"forward","frame":"0","from":"x:50px;opacity:0;","to":"o:1;","ease":"Power3.easeInOut"},{"delay":"wait","speed":300,"frame":"999","to":"auto:auto;","ease":"Power3.easeInOut"}]'
                          data-textAlign="['center']">
                          Ignite -AP <br> <br> Ideathon! Fest
+                         <h1>Countdown Timer</h1>
+                         <!-- {% if remaining_days is not None %}
+                             <p>Time remaining: {{ remaining_days|default:"00" }} days
+                                 {{ remaining_hours|default:"00" }}:{{ remaining_minutes|default:"00" }}:{{ remaining_seconds|default:"00" }}</p>
+                         {% else %}
+                             <p>No countdown set</p>
+                         {% endif %} -->
+                         
+                          <div class="timmer-block ">
+                        <div class="clock">
+                            <div class="days p-1">
+                                <div class="first">
+                                    <div class="number">0</div>
+                                </div>
+                                <div class="second">
+                                    <div class="number">0</div>
+                                </div>
+                            </div>
+                            <div class="tick">:</div>
+                            <div class="hours p-1">
+                                <div class="first">
+                                    <div class="number">0</div>
+                                </div>
+                                <div class="second">
+                                    <div class="number">0</div>
+                                </div>
+                            </div>
+                            {% if EventTimer %}
+                         <p style="color:#f8f9fc!important;background-color: aqua;"></p>
+                         {% endif %}
+                            <div class="tick">:</div>
+                            <div class="minutes p-1">
+                                <div class="first">
+                                    <div class="number">0</div>
+                                </div>
+                                <div class="second">
+                                    <div class="number">0</div>
+                                </div>
+                            </div>
+                            <div class="tick">:</div>
+                            <div class="seconds p-1">
+                                <div class="first ">
+                                    <div class="number">0</div>
+                                </div>
+                                <div class="second infinite">
+                                    <div class="number ">0</div>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- <div class="d-flex labels">
+                            <div class="days-m">
+                                <p>Days</p>
+                            </div>
+                            <div class="days-m">
+                                <p>Hours</p>
+                            </div>
+                            <div class="days-m">
+                                <p>Minutes</p>
+                            </div>
+                            <div class="days-m">
+                                <p>Seconds</p>
+                            </div>
+                        </div> -->
+                        </div>
                     </div>
 
                     <!-- LAYER NR. 2 -->
@@ -58,18 +122,17 @@
                     </div> -->
                 </li>
 
-                <!-- SLIDE  -->
-                <li data-index="rs-28" data-transition="slidingoverlayvertical,slidingoverlayleft,slideoverup"
+             
+                <!-- <li data-index="rs-28" data-transition="slidingoverlayvertical,slidingoverlayleft,slideoverup"
                     data-slotamount="default,default,default" data-hideafterloop="0" data-hideslideonmobile="off"
                     data-easein="default,default,default" data-easeout="default,default,default"
                     data-masterspeed="default,default,default" data-thumb="{% static 'assets/img/slider/02_thumb.jpg' %}"
                     data-rotate="0,0,0" data-saveperformance="off" data-title="Slide">
-                    <!-- MAIN IMAGE -->
+                 
                     <img src="{% static 'assets/img/slider/b2.png' %}" alt="Ignite" data-bgposition="top center"
                          data-bgfit="cover" data-bgrepeat="no-repeat" data-bgparallax="15" class="rev-slidebg"
                          data-no-retina>
 
-                    <!-- LAYER NR. 4 -->
                     <div class="tp-caption tp-resizeme slide-heading" data-x="['center','center','center','center']"
                          data-hoffset="['0','0','0','0']" data-y="['top','top','top','top']"
                          data-voffset="['250','204','200','201']" data-fontsize="['55','60','50','30']"
@@ -79,9 +142,10 @@
                          data-frames='[{"delay":10,"split":"chars","splitdelay":0.1,"speed":1000,"split_direction":"forward","frame":"0","from":"x:-50px;opacity:0;","to":"o:1;","ease":"Power4.easeInOut"},{"delay":"wait","speed":300,"frame":"999","to":"auto:auto;","ease":"Power3.easeInOut"}]'
                          data-textAlign="['center']">
                          Ignite -AP <br> <br> Ideathon! Fest
+           
                     </div>
 
-                    <!-- LAYER NR. 5 -->
+              
                     <div class="tp-caption tp-resizeme slide-txt" data-x="['center','center','center','center']"
                          data-hoffset="['0','0','0','0']" data-y="['top','top','top','top']"
                          data-voffset="['400','370','370','300']" data-fontsize="['16','20','20','20']"
@@ -95,7 +159,7 @@
 
                     </div>
 
-                </li>
+                </li> -->
             </ul>
             <div class="tp-bannertimer tp-bottom"></div>
         </div>
@@ -158,6 +222,10 @@
                         visionary ideas into tangible solutions that can positively
                         impact the lives of individuals, communities, and the future
                         landscape as a whole.</p>
+
+                        {% if EventTimer %}
+                        <p style="color:#081640!important;background-color: aqua; visibility: hidden;" id="eventdatetime" onload="updateCountdown()">{{EventTimer.target_datetime}}</p>
+                        {% endif %}  
                 </div>
             </div>
 
