--- a/igniteap/templates/uifiles/base.html
+++ b/igniteap/templates/uifiles/base.html
@@ -83,13 +83,12 @@
             <div class="col-7 col-lg-3">
                 
                 <div class="header-action text-end login-user-btn">
-                    
-                    <a href="/login" class="tel-no"><i class="fa fa-user-circle"></i>Login User</a>
-                    <!-- <button class="btn-cog">
-                        {% if user.is_authenticated %}
-                        <i class="fa fa-user-circle"></i><span>{{request.user.username}}</span>
-                        {% endif %}
-                    </button> -->
+                    <!-- {{ request.user.first_name }} -->
+                    {% if not request.user.is_authenticated %}
+                    <a href="/login/" class="tel-no"><i class="fa fa-user-circle"></i>&nbsp;Login</a>
+                {% else %}
+                    <a href="/logout/"><span class="log-out">LogOut</span></a>
+                {% endif %}
                     <button class="btn-menu d-lg-none"><i class="fa fa-bars"></i></button>
                 </div>
              
