--- a/igniteap/templates/uifiles/index.html
+++ b/igniteap/templates/uifiles/index.html
@@ -304,7 +304,7 @@
         </div>
     </div>
 </div> -->
-<div class="service-area-wrapper sm-top-wt">
+<div class="service-area-wrapper sm-top-wt pb-5">
     <div class="service-area-top parallax" data-parallax-speed="0.75" data-bg="assets/img/service/service-bg.jpg" style="background-position: center 26.95%; background-image: url(&quot;assets/img/service/service-bg.jpg&quot;);">
         <div class="container">
             <div class="row">
@@ -749,16 +749,148 @@
             Ideathon that promises to fan the 
             flames of innovation and illuminate 
             the path to progress</p> <br>
-        <img src="{% static 'assets/img/home/home-event-banner-img.png' %}" width="100%" alt="A black, brown, and white dog wearing a kerchief">
+        <!-- <img src="{% static 'assets/img/home/home-event-banner-img.png' %}" width="100%" alt="A black, brown, and white dog wearing a kerchief"> -->
+
         
     </div>
 </div>
 
+<section class="section contact blog-sec-main bg-light pt-5" data-section="Service" >
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12 service-heading-section">
+          <div class="section-heading">
+            <!-- <h2>Services</h2> -->
+          </div>
+        </div>
+        </div>
+        <div class="row service-list">
+          <div class="col-sm-12 col-md-4 mb-5">
+            <div class="card card-flip h-100">
+                <div class="card-front" style="background-image: url(../../static/assets/img/event-description.png); background-size: cover; height: 100%; opacity:0.7; background-color:red; ">
+                  <div class="card-body" >
+                      <h3 class="card-title" style="font-size: 25px;">Product voice crafting</h3>
+                  </div>
+              </div>
+              <div class="card-back">
+                  <div class="card-body">
+                      <h3 class="card-title" style="font-size: 25px;" >Product voice crafting</h3>
+                      <p class="card-text" >Ever wondered how biscuits have different sounds? Your Brand Product can also have a sound that can be uniquely identified which can be used in your brand marketing campaigns.
+                      </p>
+                      <a href="" class="btn btn-warning">View More</a>
+                  </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-12 col-md-4 mb-5">
+            <div class="card card-flip h-100">
+              <div class="card-front">
+                  <div class="card-body">
+                      <h3 class="card-title" style="font-size: 25px;">Brand Sounds</h3>
+                  </div>
+              </div>
+              <div class="card-back h-100">
+                  <div class="card-body">
+                      <h3 class="card-title" style="font-size: 25px;" >Brand sounds</h3>
+                      <p class="card-text" >Brands like Netflix, Prime, Parle have their own unique sounds. Similarly you can have one of your own. Your brand sound/music can give your customers a sense of nostalgia each they hear it. At AperturArt, we craft tailored music that suits your brand.
+                      </p>
+                      <a href="" class="btn btn-warning">View More</a>
+                  </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-12 col-md-4 mb-5">
+            <div class="card card-flip h-100">
+              <div class="card-front">
+                  <div class="card-body">
+                      <h3 class="card-title" style="font-size: 25px;">Personality Shots</h3>
+                  </div>
+              </div>
+              <div class="card-back h-100">
+                  <div class="card-body">
+                      <h3 class="card-title" style="font-size: 25px;" >Personality Shots</h3>
+                      <p class="card-text" >When you represent a company or an entire organisation, your personality determines the organisation strength. Every person has a perfect angle for their facial attractiveness. At AperturArt, we combine the image building techniques to identify and give you the perfect portfolio to build your image.
+                      </p>
+                      <a href="" class="btn btn-warning">View More</a>
+                  </div>
+              </div>
+            </div>
+          </div>
+          </div>
 
-<div class="blog-area-wrapper sm-top6" style="background-color: #f8f9fc;">
+          <div class="row service-list2 ">
+            <div class="col-md-4 mb-5">
+              <div class="card card-flip h-100">
+                <div class="card-front">
+                    <div class="card-body">
+                        <h3 class="card-title" style="font-size: 25px;">Product Visual Experience</h3>
+                    </div>
+                </div>
+                <div class="card-back h-100">
+                    <div class="card-body">
+                        <h3 class="card-title" style="font-size: 25px;" >Product Visual Experience</h3>
+                        <p class="card-text" >Experience
+                          A visual experience gives an 'Awestruck' feel to the consumers to immediately buy the product. At AperturArt, we don't just do casual photography, but we craft it according to your segment brands and then bring out the best visual experience for your consumers to watch.
+                        </p>
+                        <a href="" class="btn btn-warning">View More</a>
+                    </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-4 mb-5">
+              <div class="card card-flip h-100">
+                <div class="card-front">
+                    <div class="card-body">
+                      <h3 class="card-title" style="font-size: 25px;">Product Process</h3>  
+                      <!-- <h3 class="card-title" style="font-size: 25px;">Product process shoot for consumer experience</h3> -->
+                    </div>
+                </div>
+                <div class="card-back h-100">
+                    <div class="card-body">
+                        <h3 class="card-title" style="font-size: 25px;" >Product Process</h3>
+                        <p class="card-text" >For all those products that have systematic procedure in making a perfect product, this product process visualisation shoot will help your consumers understand in less than 30 seconds on how to make your product
+                        </p>
+                        <a href="" class="btn btn-warning">View More</a>
+                    </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-4 mb-5">
+              <div class="card card-flip h-100">
+                <div class="card-front">
+                    <div class="card-body">
+                        <h3 class="card-title" style="font-size: 25px;">Product Photography</h3>
+                    </div>
+                </div>
+                <div class="card-back h-100">
+                    <div class="card-body">
+                        <h3 class="card-title" style="font-size: 25px;" >Product Photography</h3>
+                        <p class="card-text" >We deal with image production for eCommerce, creating photos of different products according to strict parameters to facilitate your consecutive sale on websites, social media, and marketplaces.
+                        </p>
+                        <a href="" class="btn btn-warning">View More</a>
+                    </div>
+                </div>
+              </div>
+      </div>
+    </div>
+  </section>
+
+
+
+
+
+
+
+<!----  Blog section start-->
+
+
+<!---Blog section end-->
+
+
+<!-- <div class="blog-area-wrapper sm-top6" style="background-color: #f8f9fc;">
     <div class="container">
         <div class="row mtn-35">
-            <!-- <div class="col-md-6 col-lg-4">
+            <div class="col-md-6 col-lg-4">
                 <div class="blog-item">
                     <div class="text-center" style="padding-top: 50px;">
                         <img src="{% static 'assets/img/card-1.png' %}" alt="" height="100" width="100" style="border-radius: 45%;">
@@ -777,7 +909,7 @@
                 </div>
             </div> -->
 
-            <div class="col-md-6 col-lg-6">
+            <!-- <div class="col-md-6 col-lg-6">
                 <div class="blog-item">
                     <div class="blog-content text-center">
                         <h2 class="h5"><a href="#" style="color: #0e0067;" >Day - 01</a></h2>
@@ -822,7 +954,7 @@
             </div>
         </div>
     </div>
-</div>
+</div> -->
 
 <!-- <div class="testimonial-area testimonial-area--2 bg-offwhite sm-top7">
     <div class="container">
