--- a/igniteap/templates/uifiles/index.html
+++ b/igniteap/templates/uifiles/index.html
@@ -456,285 +456,6 @@
         </div>
     </div>
 </div>
-<!-- <div class="page-content-wrapper join-ignite" style="padding-top: 50px; background-image: url({% static 'assets/img/home/why-joint-ignite-bg-img.png' %});">
-    <div class="member-details-wrapper sm-top2">
-        <div class="container">
-            <div class="member-details-wrap">
-                <div class="member-details-middle sm-top3">
-                    <div class="row ">
-                        <h2>Why Join <span>IGNITE?</span></h2>
-                        <div class="blog-item">
-                            <div class="row align-items-center ">
-                                <div class="col-sm-12 col-lg-4 col-md-4 ">
-                                    <figure class="blog-thumb">
-                                        <a href="#"><img src="{% static 'assets/img/home/Impact.png' %}" alt="Ignite-Blog" height="300" width="650"></a>
-                                    </figure>
-                                </div>
-                                <div class="col-sm-12 col-lg-8 col-md-8">
-                                    <div class="blog-content join-event">
-                                        <h2 class="h5"><a href="#">Impact</a></h2>
-                                        <p>IGNITE empowers you to directly address real issues in our state. Your innovative 
-                                            ideas have the potential to bring about tangible, positive change for your community and 
-                                            beyond</p>
-    
-                                       
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="blog-item">
-                            <div class="row align-items-center ">
-                                
-                                <div class="col-sm-12 col-lg-8 col-md-8">
-                                    <div class="blog-content join-event">
-                                        <h2 class="h5"><a href="#">Network</a></h2>
-                                        <p>Connect with a diverse group of like-minded individuals, including fellow 
-                                            innovators, seasoned mentors, and potential collaborators. Forge valuable relationships that 
-                                            extend far beyond the event</p>
-    
-                                        
-                                    </div>
-                                </div>
-                                <div class="col-sm-12 col-lg-4 col-md-4 ">
-                                    <figure class="blog-thumb">
-                                        <a href="#"><img src="{% static 'assets/img/home/network.png' %}" alt="Ignite-Blog" height="300" width="650"></a>
-                                    </figure>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="blog-item">
-                            <div class="row align-items-center ">
-                                <div class="col-sm-12 col-lg-4 col-md-4 ">
-                                    <figure class="blog-thumb">
-                                        <a href="#"><img src="{% static 'assets/img/home/Learning.png' %}" alt="Ignite-Blog" height="300" width="650"></a>
-                                    </figure>
-                                </div>
-                                <div class="col-sm-12 col-lg-8 col-md-8">
-                                    <div class="blog-content join-event">
-                                        <h2 class="h5"><a href="#">Learning</a></h2>
-                                        <p>IGNITE offers a unique learning experience. Gain invaluable insights, develop 
-                                            critical skills, and acquire practical knowledge that can benefit your personal and 
-                                            professional growth</p>
-    
-                                        
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="blog-item">
-                            <div class="row align-items-center ">
-                                
-                                <div class="col-sm-12 col-lg-8 col-md-8">
-                                    <div class="blog-content join-event">
-                                        <h2 class="h5"><a href="#">Prizes</a></h2>
-                                        <p>Win great rewards and be recognized for your creative thoughts. More 
-                                            importantly, you will be able to access incubation support, resources, and mentorship to 
-                                            assist you in bringing your ideas to fruition.</p>
-    
-                                        
-                                    </div>
-                                </div>
-                                <div class="col-sm-12 col-lg-4 col-md-4 ">
-                                    <figure class="blog-thumb">
-                                        <a href="#"><img src="{% static 'assets/img/home/Prize.png' %}" alt="Ignite-Blog" height="300" width="650"></a>
-                                    </figure>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="blog-item">
-                            <div class="row align-items-center ">
-                                <div class="col-sm-12 col-lg-4 col-md-4 ">
-                                    <figure class="blog-thumb">
-                                        <a href="#"><img src="{% static 'assets/img/home/Fun.png' %}" alt="Ignite-Blog" height="300" width="650"></a>
-                                    </figure>
-                                </div>
-                                <div class="col-sm-12 col-lg-8 col-md-8">
-                                    <div class="blog-content join-event">
-                                        <h2 class="h5"><a href="#" >Fun</a></h2>
-                                        <p>While IGNITE is undoubtedly a platform for serious innovation, it's also a space for 
-                                            camaraderie, teamwork, and, of course, fun! Expect an electrifying atmosphere filled with 
-                                            creativity and collaboration.</p>
-    
-                                        
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div> -->
-
-
-
-
-<!--== End Feature Area Wrapper ==-->
-
-<!--== Start Testimonial Area Wrapper ==-->
-<!-- <div class="testimonial-area testimonial-area--2 bg-offwhite sm-top">
-    <div class="container">
-        <div class="row d-lg-none">
-            <div class="col-12 text-center">
-                <div class="section-title">
-                    <h6>TESTIMONIALS</h6>
-                    <h2>Don’t Believe us, <br> Check Client Word</h2>
-                    <h5 class="tagline">More over <span class="tag-no">1900+</span> <strong>customer</strong></h5>
-                </div>
-            </div>
-        </div>
-
-        <div class="row align-items-center">
-            <div class="col-md-5">
-                <div class="testimonial-thumbnail mt-sm-5 mt-md-1">
-                    <div class="testimonial-thumbnail-item">
-                        <img src="{% static 'assets/img/testimonial/h-2-t-01.png' %}" alt="Ignite-Testimonial"/>
-                    </div>
-                    <div class="testimonial-thumbnail-item">
-                        <img src="{% static 'assets/img/testimonial/h-2-t-02.png' %}" alt="Ignite-Testimonial"/>
-                    </div>
-                    <div class="testimonial-thumbnail-item">
-                        <img src="{% static 'assets/img/testimonial/h-2-t-03.png' %}" alt="Ignite-Testimonial"/>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-md-7 ms-auto">
-                <div class="testimonial-area-right">
-                    <div class="section-title d-none d-lg-block">
-                        <h6>TESTIMONIALS</h6>
-                        <h2>Don’t Believe us, <br> Check Client Word</h2>
-                        <h5 class="tagline">More over <span class="tag-no">1900+</span> <strong>customer</strong></h5>
-                    </div>
-
-                    <div class="testimonial-content-wrap pl-0">
-                        <div class="testimonial-content--2">
-                            
-                            <div class="testimonial-item testimonial-item--2">
-                                <div class="testimonial-txt">
-                                    <img src="{% static 'assets/img/icons/quote.png' %}" alt="Ignite"/>
-                                    <p>Very much happy with provide the best Business
-                                        Solutions for Clients to grow up their Business very
-                                        sharply. pursue pleasure rationally encounter.</p>
-                                    <h5 class="client-name">David Loyed, <span
-                                            class="designation">CTO, Aflex Group</span></h5>
-                                </div>
-                            </div>
-                            
-
-                            
-                            <div class="testimonial-item testimonial-item--2">
-                                <div class="testimonial-txt">
-                                    <img src="{% static 'assets/img/icons/quote.png' %}" alt="Ignite"/>
-                                    <p>Very much happy with provide the best Business
-                                        Solutions for Clients to grow up their Business very
-                                        sharply. pursue pleasure rationally encounter.</p>
-                                    <h5 class="client-name">Alex Tuntuni, <span class="designation">Co-Founder, Tuntuni Group</span>
-                                    </h5>
-                                </div>
-                            </div>
-                            
-
-                            
-                            <div class="testimonial-item testimonial-item--2">
-                                <div class="testimonial-txt">
-                                    <img src="{% static 'assets/img/icons/quote.png' %}" alt="Ignite"/>
-                                    <p>Very much happy with provide the best Business
-                                        Solutions for Clients to grow up their Business very
-                                        sharply. pursue pleasure rationally encounter.</p>
-                                    <h5 class="client-name">John Fault, <span
-                                            class="designation">COO, Mafia Group</span></h5>
-                                </div>
-
-                            </div>
-                            
-                        </div>
-                        <div class="testimonial-arrows-2"></div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div> -->
-<!--== End Testimonial Area Wrapper ==-->
-
-<!--== Start Team Area Wrapper ==-->
-
-<!-- <div class="team-area bg-brand">
-    <div class="row g-0 align-items-center">
-        <div class="col-xl-4">
-            <div class="team-area-left text-center text-md-start">
-                <div class="section-title section-title--light mb-0">
-                    <h6>Creative Team</h6>
-                    <h2>We have great <br>creative team</h2>
-                    <p><strong>Businex</strong> always try to provide the best Business Solutions
-                        for Clients to grow up their Business sharp and smoothly.
-                        We voluptatem voluptas aspernatur aut odit fugit, quia consequuur magni dolores eos qui ratione.
-                    </p>
-                </div>
-            </div>
-        </div>
-
-        <div class="col-xl-8">
-            <div class="team-area-right team-area-right--2 bg-img" data-bg="{% static 'assets/img/team/team-bg-2.jpg' %}">
-                <div class="row g-0 align-items-end mtn-40">
-                    <div class="col-sm-6 col-lg-3">
-                        <div class="team-mem-item team-mem-item--2">
-                            <figure class="member-pic">
-                                <img src="{% static 'assets/img/team/h-2-01.png' %}" alt="Team-Businex"/>
-                            </figure>
-                            <div class="member-info">
-                                <h5><a href="team.html">Lucy Farnando</a></h5>
-                                <span class="designation">CTO & Founder</span>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-sm-6 col-lg-3">
-                        <div class="team-mem-item team-mem-item--2">
-                            <figure class="member-pic">
-                                <img src="{% static 'assets/img/team/h-2-02.png' %}" alt="Team-Businex"/>
-                            </figure>
-                            <div class="member-info">
-                                <h5><a href="team.html">James Anderson</a></h5>
-                                <span class="designation">Creative Head</span>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-sm-6 col-lg-3">
-                        <div class="team-mem-item team-mem-item--2">
-                            <figure class="member-pic">
-                                <img src="{% static 'assets/img/team/h-2-03.png' %}" alt="Team-Businex"/>
-                            </figure>
-                            <div class="member-info">
-                                <h5><a href="team.html">Thomas Nancy</a></h5>
-                                <span class="designation">Marketing Head</span>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-sm-6 col-lg-3">
-                        <div class="team-mem-item team-mem-item--2">
-                            <figure class="member-pic">
-                                <img src="{% static 'assets/img/team/h-2-04.png' %}" alt="Team-Businex"/>
-                            </figure>
-                            <div class="member-info">
-                                <h5><a href="team.html">Nail Mathue</a></h5>
-                                <span class="designation">Head of Research</span>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div> -->
 
 <!--== End Team Area Wrapper ==-->
 
@@ -767,9 +488,9 @@
         <div class="row service-list">
           <div class="col-sm-12 col-md-4 mb-5">
             <div class="card card-flip h-100">
-                <div class="card-front" style="background-image: url(../../static/assets/img/event-description.png); background-size: cover; height: 100%; opacity:0.7; background-color:red; ">
+                <div class="card-front" style="background-image: url(../../static/assets/img/event-description.png); background-size: cover; height: 100%; opacity:0.7; background-color: rgba(0, 0, 0, 0.945); ">
                   <div class="card-body" >
-                      <h3 class="card-title" style="font-size: 25px;">Product voice crafting</h3>
+                      <h3 class="card-title front-title" style="font-size: 25px; color:red">Product voice crafting</h3>
                   </div>
               </div>
               <div class="card-back">
@@ -777,7 +498,7 @@
                       <h3 class="card-title" style="font-size: 25px;" >Product voice crafting</h3>
                       <p class="card-text" >Ever wondered how biscuits have different sounds? Your Brand Product can also have a sound that can be uniquely identified which can be used in your brand marketing campaigns.
                       </p>
-                      <a href="" class="btn btn-warning">View More</a>
+                      <a href="" class="btn btn-warning mb-4">View More</a>
                   </div>
               </div>
             </div>
