--- a/igniteap/templates/uifiles/base.html
+++ b/igniteap/templates/uifiles/base.html
@@ -87,7 +87,7 @@
                     {% if not request.user.is_authenticated %}
                     <a href="/login/" class="tel-no"><i class="fa fa-user-circle"></i>&nbsp;Login</a>
                 {% else %}
-                    <a href="/logout/"><span class="log-out">LogOut</span></a>
+                    <a href="/logout/"><span class="log-out"><i class="fa fa-user-circle"></i>LogOut</span></a>
                 {% endif %}
                     <button class="btn-menu d-lg-none"><i class="fa fa-bars"></i></button>
                 </div>
