--- a/igniteap/static/assets/homecss/main.css
+++ b/igniteap/static/assets/homecss/main.css
@@ -605,3 +605,10 @@ px
   .number{
     font-weight: 600;
   }
+
+.panelist-card{
+  border: 1px solid black;
+  margin-bottom: 10px;
+  width: auto;
+ 
+}
